# ID-Documents-Antitampering-MRZ

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  antitamperingMrzFactory.cpp  antitamperingMrzFactory.hpp  conanfile.py  main.cpp
AntitamperingMrz/: AntitamperingMrz.h
AntitamperingMrz/DBSCAN/: AntitamperingMrzDBSCAN.cpp  AntitamperingMrzDBSCAN.h
AntitamperingMrz/DBSCAN/include/: Anchors.h  DBSCAN.h  Document.h  Metrics.h
AntitamperingMrz/DBSCAN/include/MRZ/: MRVA.h  TD1.h  TD2.h
AntitamperingMrz/DBSCAN/src/: Document.cpp  Field.cpp  Fields.cpp  ModelBoxes.cpp  utilities.cpp
antitampering_mrz/: CMakeLists.txt  antitamperingMrzFactory.cpp  antitamperingMrzFactory.hpp
antitampering_mrz/AntitamperingMrz/DBSCAN/: AntitamperingMrzDBSCAN.cpp  AntitamperingMrzDBSCAN.h
antitampering_mrz/AntitamperingMrz/DBSCAN/data/: BGR_AO_02001_FRONT.xml  ZWE_AO_01002_FRONT.xml
antitampering_mrz/AntitamperingMrz/DBSCAN/include/: Date.h  Dictionary.h  Field.h  Fields.h  ModelBoxes.h  XMLBoxes.h  pugixml.hpp  utilities.h
antitampering_mrz/AntitamperingMrz/DBSCAN/include/MRZ/: MRVA.h  MRVB.h  TD1.h  TD2.h  TD3.h
antitampering_mrz/AntitamperingMrz/DBSCAN/src/: Anchors.cpp  Character.cpp  Fields.cpp  MRZ.cpp  Response.cpp
antitampering_mrz/AntitamperingMrz/DBSCAN/src/MRZ/: MRVA.cpp  MRVB.cpp  TD1.cpp  TD2.cpp  TD3.cpp
antitampering_mrz/data/: AFG_AO_01001_FRONT_3.xml  IMG-20220930-WA0002.xml
antitampering_mrz/src/: antitamperingMrzApi.cpp  antitamperingMrzApi.hpp  antitamperingMrzFactory.cpp  antitamperingMrzFactory.hpp  appFactory.cpp  appFactory.hpp
antitampering_mrz/src/AntitamperingMrz/: AntitamperingMrz.h
antitampering_mrz/src/AntitamperingMrz/EuclDist/: Anchors.h  AntitamperingMrzEuclDist.cpp  AntitamperingMrzEuclDist.h  Boxes.cpp  DBSCAN.cpp  Date.cpp  Date.h  Dictionary.cpp  Dictionary.h  Document.cpp  Document.h  Fields.h  MRVA.cpp  MRVA.h  MRVB.h  Metrics.h  ModelBoxes.cpp  Response.cpp  TD3.cpp  XMLBoxes.h  utilities.h
antitampering_mrz/src/antitampering/mrz/: antitamperingMrzApi.cpp  antitamperingMrzApi.hpp  antitamperingMrzFactory.cpp  antitamperingMrzFactory.hpp
antitampering_mrz/src/antitampering/mrz/AntitamperingMrz/: AntitamperingMrz.h
antitampering_mrz/src/antitampering/mrz/AntitamperingMrz/DBSCAN/: AntitamperingMrzDBSCAN.cpp  Character.h  Document.cpp  Field.cpp  Field.h  ModelBoxes.h  Response.cpp  Response.h  TD1.h  TD2.h  TD3.h  utilities.cpp
antitampering_mrz/src/antitampering/mrz/AntitamperingMrz/EuclDist/: Anchors.cpp  AntitamperingMrzEuclDist.cpp  Boxes.h  Character.cpp  DBSCAN.h  Document.h  Fields.cpp  MRZ.cpp  MRZ.h  ModelBoxes.h  Response.cpp  TD1.cpp  TD2.cpp  XMLBoxes.cpp
antitampering_mrz/src/antitampering/mrz/exceptions/: Exceptions.hpp
antitampering_mrz/src/ocr/: OcrApi.cpp  OcrApi.hpp  OcrFactory.cpp  OcrFactory.hpp
antitampering_mrz/src/ocr/Ocr/: Ocr.hpp
antitampering_mrz/src/ocr/Ocr/RetinaNet/: Anchors.hpp  Dictionary.hpp  OcrRetinaNet.cpp  OcrRetinaNet.hpp  UtilitiesRetinaNet.cpp  UtilitiesRetinaNet.hpp
antitampering_mrz/src/ocr/ocr_utils/: ocrUtils.hpp
antitampering_mrz/src/tests/: main.cpp
antitampering_mrz/src/tests/testCases/unitTests/: AntitamperingMrzUnitTestSuite.cpp  OcrUnitTestSuite.cpp
data/: AFG_AO_01001_FRONT.xml
exceptions/: Exceptions.hpp
include/: Anchors.h  Boxes.h  Character.h  Characters.h  DBSCAN.h  Date.h  Dictionary.h  Document.h  Field.h  Fields.h  MRVA.h  MRVB.h  MRZ.h  Metrics.h  ModelBoxes.h  Points.h  Response.h  TD1.h  TD2.h  TD3.h  XMLBoxes.h  pugixml.hpp  utilities.h
include/MRZ/: MRVA.h  MRVB.h  TD1.h  TD2.h  TD3.h
src/: Anchors.cpp  Anchors.h  Boxes.cpp  Character.cpp  Characters.cpp  DBSCAN.cpp  Date.cpp  Dictionary.cpp  Document.cpp  Field.cpp  Fields.cpp  MRVA.cpp  MRVB.cpp  MRZ.cpp  Metrics.cpp  ModelBoxes.cpp  Points.cpp  Response.cpp  TD1.cpp  TD2.cpp  TD3.cpp  XMLBoxes.cpp  appFactory.cpp  appFactory.hpp  main.cpp  utilities.cpp
src/MRZ/: MRVA.cpp  MRVB.cpp  TD1.cpp  TD2.cpp  TD3.cpp
src/antitampering/mrz/: AntitamperingMrzApi.cpp  AntitamperingMrzApi.hpp  AntitamperingMrzFactory.cpp  AntitamperingMrzFactory.hpp  antitamperingMrzApi.hpp  antitamperingMrzFactory.cpp  antitamperingMrzFactory.hpp
src/antitampering/mrz/AntitamperingMrz/: AntitamperingMrz.h  AntitamperingMrz.hpp
src/antitampering/mrz/factory/: AntitamperingMrzFactory.cpp  AntitamperingMrzFactory.hpp
src/base64/: base64.h
src/charactersClustering/: CharactersClusteringApi.cpp  CharactersClusteringApi.hpp  CharactersClusteringFactory.cpp  CharactersClusteringFactory.hpp
src/charactersClustering/CharactersClustering/: CharactersClustering.hpp
src/charactersClustering/CharactersClustering/DBSCAN/: DBSCAN.cpp  DBSCAN.hpp
src/charactersClustering/CharactersClustering/DBSCANboxes/: DBSCANboxes.cpp  DBSCANboxes.hpp
src/charactersClustering/CharactersClustering/DBSCANpoints/: DBSCANpoints.cpp  DBSCANpoints.hpp
src/charactersassociator/: CharactersAssociatorAPI.cpp  CharactersAssociatorAPI.hpp  CharactersAssociatorApi.cpp  CharactersAssociatorApi.hpp  CharactersAssociatorFactory.cpp  CharactersAssociatorFactory.hpp
src/charactersassociator/CharactersAssociator/: CharactersAssociator.hpp
src/charactersassociator/CharactersAssociator/DBSCAN/: DBSCAN.cpp  DBSCAN.hpp  DBSCANUtilities.cpp  DBSCANUtilities.hpp  Point.cpp  Point.hpp
src/charactersassociator/CharactersAssociator/DBSCANboxes/: DBSCANboxes.cpp  DBSCANboxes.hpp
src/common/exceptions/: Exceptions.hpp
src/common/utils/: utils.hpp
src/ocr/: OcrApi.cpp  OcrApi.hpp  OcrFactory.cpp  OcrFactory.hpp  OcrMain.cpp
src/ocr/Ocr/: Ocr.hpp
src/ocr/Ocr/RetinaNet/: Dictionary.cpp  (+4 more)
src/ocr/exceptions/: Exceptions.hpp
src/ocr/ocr_utils/: ocrUtils.hpp
src/ocr_server/: OcrFactory.cpp  OcrFactory.hpp
src/ocr_server/Ocr/: Ocr.hpp
src/ocr_server/charactersClustering/: CharactersClusteringApi.cpp  CharactersClusteringApi.hpp
src/ocr_server/ocr/: OcrApi.cpp  OcrApi.hpp
src/print/: PrintResult.cpp  PrintResult.hpp
src/tests/: TestHelper.hpp
test_package/: CMakeLists.txt
test_package/src/: main.cpp
(+77 files in other folders)
